<resources>
    <string name="app_name" translatable="false">PinReal</string>
    <string name="landmark_title">Landmark Title</string>
    <string name="landmark_map">📌 Location</string>
    <string name="landmark_distance">00.0km</string>
    <string name="landmark_visitors">00000</string>
    <string name="landmark_description">Landmark Description</string>
    <string name="landmark_image">Photo of the Landmark</string>
    <string name="landmark_camera">Camera 📸</string>

    <string name="user_img_num">Landmarks\nVisited!</string>
    <string name="user_follow">Follow</string>
    <string name="user_following">Following</string>

    <string name="service_desc_notification_send">Uploading your Post!</string>

    <string name="notification_new_post_title">%s @ 📌%s</string>
    <string name="notification_new_post_body">%s has posted a picture of 📌%s</string>

    <string name="notification_upload_post_title">Uploading Post</string>
    <string name="notification_upload_post_body">Uploading your new Post</string>

    <string name="login_title">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_submit">Sign-In</string>

    <string name="login_incorrect_username">Username is incorrect!</string>
    <string name="login_incorrect_password">Password is incorrect!</string>

    <string name="home_landmarks">Nearby Landmarks</string>
    <string name="home_following">Recently Taken Photos</string>
    <string name="home_user_guide">User Guide</string>

    <string name="key_user_uid" translatable="false">KeyUserUID</string>
    <string name="key_token" translatable="false">KeyToken</string>
</resources>